fix for test step

--- a/.github/workflows/tests_bdd.yml
+++ b/.github/workflows/tests_bdd.yml
@@ -42,4 +42,6 @@ jobs:
           pip3 install virtualenv
           ./prepare_test_env.sh
       - name: Execute tests
+        shell: bash
+        run: |
           make tests_bdd
